--- a/_config.yml
+++ b/_config.yml
@@ -8,38 +8,45 @@
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 #--------------------------
 
-title: Chirpy                          # the main title
+title: Carnivore Jiujitero             # the main title
 
-tagline: A text-focused Jekyll theme.  # it will display as the sub-title
+tagline: A statistical analysis of a carnivore journey.  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, portfolio, sidebar,
-  bootstrap Jekyll theme with responsive web design
-  and focuses on text presentation.
+#  A minimal, portfolio, sidebar,
+#  bootstrap Jekyll theme with responsive web design
+#  and focuses on text presentation.
 
 # Replace with the website url, e.g. 'https://username.github.io'
+
 url: 'protocol://domain'
 
-author: your_full_name                  # change to your full name
+author: Austin Haedicke                  # change to your full name
 
-avatar: /assets/img/sample/avatar.jpg   # support internet resources
+avatar: /assets/img/sample/avatar.jpg    # support internet resources
 
 github:
-  username: github_username             # change to your github username
+  username: savagezen             # change to your github username
 
-twitter:
-  username: twitter_username            # change to your twitter username
+instagram:
+  username: savagezen
+
+linkedin
+  username: austinhaedicke
+
+telegram
+  username: savagezen
 
 social:
-  name: your_full_name                  # it will shows as the copyright owner in Footer
-  email: example@doamin.com             # change to your email address
+  name: Austin Haedicke                 # it will shows as the copyright owner in Footer
+  email: example@example.com            # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
-    # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    #- https://twitter.com/username      # change to your twitter homepage
+#    - https://github.com/username        # change to your github homepage
+#     Uncomment below to add more social links
+    #- https://www.facebook.com/username
+ #   - https://www.linkedin.com/in/austinhaedicke
 
 google_site_verification: google_meta_tag_verification # change to your verification string
 
@@ -49,7 +56,7 @@ google_site_verification: google_meta_tag_verification # change to your verifica
 baseurl: ''
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone: Asia/Shanghai
+timezone: America/New_York
 
 google_analytics:
   # Fill with your Google Analytics ID
