--- a/_data/tabs.yml
+++ b/_data/tabs.yml
@@ -8,21 +8,21 @@
 -
   name: Home
   icon: "fas fa-home"
--
-  name: Categories
-  icon: "fas fa-stream"
-  path: tabs
-  url: categories
+#-
+#  name: Categories
+#  icon: "fas fa-stream"
+#  path: tabs
+#  url: categories
 -
   name: "Tags"
   icon: "fas fa-tags"
   path: tabs
   url: tags
--
-  name: "Archives"
-  path: tabs
-  url: archives
-  icon: "fas fa-archive"
+#-
+#  name: "Archives"
+#  path: tabs
+#  url: archives
+#o  icon: "fas fa-archive"
 -
   name: "About"
   icon: "fas fa-info"
