update:  post formats, sidebar, _config

--- a/_config.yml
+++ b/_config.yml
@@ -31,10 +31,10 @@ github:
 instagram:
   username: savagezen
 
-linkedin
+linkedin:
   username: austinhaedicke
 
-telegram
+telegram:
   username: savagezen
 
 social:
