--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >-                        # used by seo meta and the atom feed
 
 # Replace with the website url, e.g. 'https://username.github.io'
 
-url: '/'
+url: 'https://savagezen.github.io/carnivore'
 #url: 'protocol://domain'
 
 author: Austin Haedicke                  # change to your full name
