--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ google_site_verification: google_meta_tag_verification # change to your verifica
 #--------------------------
 
 # if your site type is Project Pages site, change below value to '/projectname'
-baseurl: '/'
+baseurl: 'baseurl: <link rel="stylesheet" href={{ "/assets/css/main.css" | relative_url }}>'
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
 timezone: America/New_York
