--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >-                        # used by seo meta and the atom feed
 
 # Replace with the website url, e.g. 'https://username.github.io'
 
-url: 'https://savagezen.github.io/carnivore'
+url: 'http://savagezen.github.io/carnivore'
 #url: 'protocol://domain'
 
 author: Austin Haedicke                  # change to your full name
@@ -54,7 +54,7 @@ google_site_verification: google_meta_tag_verification # change to your verifica
 #--------------------------
 
 # if your site type is Project Pages site, change below value to '/projectname'
-baseurl: 'baseurl: <link rel="stylesheet" href={{ "/assets/css/main.css" | relative_url }}>'
+baseurl: ''
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
 timezone: America/New_York
